# mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-pulse.yml
config/: product.yaml
docs/docs/: architecture.md  decision.md  implementationplan.md  problemstatement.md
docs/docs/phases/phase-0/: eval.md
docs/docs/phases/phase-01/: eval.md
docs/docs/phases/phase-02/: eval.md
docs/docs/phases/phase-03/: eval.md
docs/docs/phases/phase-04/: eval.md
phases/phase-01/: README.md
phases/phase-02/: README.md
phases/phase-03/: README.md
phases/phase-04/: README.md
phases/phase-05/: README.md
scripts/: download_groww_play_reviews.py  run_phase2.py  run_phase3.py  run_phase4.py
src/pulse/: __init__.py  models.py
src/pulse/phase01/: __init__.py  cli.py  config.py  dedupe.py  ingest.py  parsers.py  pii.py  text_clean.py  window.py
src/pulse/phase02/: __init__.py  config.py  drafter.py  groq_client.py  prompts.py  sampler.py  themer.py  validator.py
src/pulse/phase03/: __init__.py  formatter.py  mcp_client.py  publisher.py
src/pulse/phase04/: __init__.py  drafter.py  email_formatter.py
src/pulse/phase05/: __init__.py
tests/: conftest.py
tests/fixtures/: app_store_sample.csv  pii_sample.csv  play_store_sample.csv  quality_filter_sample.csv
tests/phase01/: test_ingest.py  test_text_clean.py
tests/phase02/: conftest.py  test_drafter.py  test_sampler.py  test_themer.py  test_validator.py
tests/phase03/: test_formatter.py  test_mcp_client.py  test_publisher.py
tests/phase04/: test_drafter.py  test_email_formatter.py
(+7 files in other folders)
